# pocketgrad

./: LICENSE  README.md  demo_graph.ipynb  demo_mlp.ipynb  pyproject.toml
.github/workflows/: ci.yml
pocketgrad/: __init__.py  engine.py  nn.py  visualize.py
test/: test_engine.py
